fix api get all user for admin role